crates/rstest-bdd-macros/tests/ui/implicit_fixture_missing.stderr
error[E0425]: cannot find value `value` in this scope
 --> tests/ui/implicit_fixture_missing.rs:4:9
  |
4 | fn step(value: u32) {}
  |         ^^^^^ not found in this scope

warning: unused variable: `value`
 --> tests/ui/implicit_fixture_missing.rs:4:9
  |
4 | fn step(value: u32) {}
  |         ^^^^^ help: if this is intentional, prefix it with an underscore: `_value`
  |
  = note: `#[warn(unused_variables)]` on by default
