crates/rstest-bdd-macros/tests/ui/implicit_fixture_missing.rs
use rstest_bdd_macros::given;

#[given("a number")]
fn step(value: u32) {}

fn main() {}
